[gd_scene load_steps=24 format=3 uid="uid://c6had0w6tgvw6"]

[ext_resource type="Script" path="res://scene/play_ground/PlayGroundControl.gd" id="1_4bxfx"]
[ext_resource type="Shader" path="res://shader/whirl_texture.gdshader" id="3_qnmao"]
[ext_resource type="Texture2D" uid="uid://lkwl7qgxwc8n" path="res://image/texture/slash_left_45.svg" id="6_srful"]
[ext_resource type="Texture2D" uid="uid://dfq4nr2oyt3mr" path="res://image/texture/crash.svg" id="7_7o5xm"]
[ext_resource type="Texture2D" uid="uid://cd8vw76awn13p" path="res://image/texture/track.svg" id="7_ol0uo"]
[ext_resource type="Script" path="res://scene/play_ground/Ct.gd" id="8_hms3c"]
[ext_resource type="Texture2D" uid="uid://bx1mw1ddu1lp5" path="res://image/texture/follow.svg" id="9_bvheb"]
[ext_resource type="Texture2D" uid="uid://dyruh3syyydp6" path="res://image/texture/practicle.svg" id="9_q6ppy"]
[ext_resource type="PackedScene" uid="uid://d3uwa2so8ndgb" path="res://scene/virtual_joystick/virtual_joystick.tscn" id="9_sf2y2"]

[sub_resource type="Animation" id="Animation_4ys72"]
resource_name = "pre_start"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/Mask:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.35, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.235294)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_18qae"]
_data = {
"pre_start": SubResource("Animation_4ys72")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cjfdj"]
bg_color = Color(0.6, 0.713726, 0.741176, 0.0588235)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8lu0f"]
shader = ExtResource("3_qnmao")
shader_parameter/rotation = 0.0

[sub_resource type="LabelSettings" id="LabelSettings_w6vl8"]
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8ceif"]
line_spacing = 0.0
font_size = 280

[sub_resource type="Curve2D" id="Curve2D_43mu5"]
_data = {
"points": PackedVector2Array(-128, 0, 141.257, 0, 0, -256, 0, -141.257, 0, 141.257, 256, 0, 141.257, 0, -141.257, 0, 0, 256, 0, 141.257, 0, -141.257, -256, 0, -141.257, 0, 0, 0, 0, -256)
}
point_count = 5

[sub_resource type="QuadMesh" id="QuadMesh_m8f3l"]
size = Vector2(512, 512)

[sub_resource type="CircleShape2D" id="CircleShape2D_umnea"]
radius = 256.0

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_4obor"]
polygon = PackedVector2Array(-11, -18, 0, -12, 11, -18, 9, -5, 18, 4, 6, 6, 0, 18, -6, 6, -18, 4, -9, -5)

[sub_resource type="CircleShape2D" id="CircleShape2D_peqsq"]
radius = 20.0

[sub_resource type="QuadMesh" id="QuadMesh_1yk10"]
lightmap_size_hint = Vector2i(202, 202)
size = Vector2(40, 40)

[sub_resource type="Gradient" id="Gradient_ctd7h"]
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 0.8, 0.686275)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lc835"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 1

[node name="PlayGroundControl" type="Control"]
process_priority = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_4bxfx")

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_18qae")
}

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cjfdj")

[node name="AudioPlayer" type="AudioStreamPlayer" parent="Panel"]

[node name="Background" type="TextureRect" parent="Panel"]
material = SubResource("ShaderMaterial_8lu0f")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 6

[node name="VideoPlayer" type="VideoStreamPlayer" parent="Panel"]
process_priority = 10
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
expand = true

[node name="Mask" type="ColorRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="DebugLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "Debug..."
label_settings = SubResource("LabelSettings_w6vl8")

[node name="CountDownText" type="Label" parent="Panel"]
modulate = Color(1, 1, 1, 0.588235)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -170.0
offset_right = 140.0
offset_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_8ceif")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayGround" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_horizontal_guides_ = []

[node name="TrackL" type="AnimatableBody2D" parent="PlayGround"]
position = Vector2(384, 324)

[node name="Path" type="Path2D" parent="PlayGround/TrackL"]
self_modulate = Color(1, 1, 1, 0.0980392)
curve = SubResource("Curve2D_43mu5")

[node name="ExamplePath" type="Path2D" parent="PlayGround/TrackL"]
visible = false
self_modulate = Color(1, 1, 1, 0.0980392)
curve = SubResource("Curve2D_43mu5")

[node name="PathFollow2D" type="PathFollow2D" parent="PlayGround/TrackL/ExamplePath"]
position = Vector2(0, -256)

[node name="Follow" type="Sprite2D" parent="PlayGround/TrackL/ExamplePath/PathFollow2D"]
rotation = 1.5708
scale = Vector2(0.2, 0.2)
texture = ExtResource("9_bvheb")

[node name="PathFollow2D2" type="PathFollow2D" parent="PlayGround/TrackL/ExamplePath"]
position = Vector2(29.9335, -254.264)
rotation = 0.116227
progress = 30.0

[node name="Follow" type="Sprite2D" parent="PlayGround/TrackL/ExamplePath/PathFollow2D2"]
rotation = 1.5708
scale = Vector2(0.2, 0.2)
texture = ExtResource("9_bvheb")

[node name="PathFollow2D3" type="PathFollow2D" parent="PlayGround/TrackL/ExamplePath"]
position = Vector2(59.4584, -249.043)
rotation = 0.233984
progress = 60.0

[node name="Follow" type="Sprite2D" parent="PlayGround/TrackL/ExamplePath/PathFollow2D3"]
rotation = 1.5708
scale = Vector2(0.2, 0.2)
texture = ExtResource("9_bvheb")

[node name="PathFollow2D4" type="PathFollow2D" parent="PlayGround/TrackL/ExamplePath"]
position = Vector2(97.4785, -236.748)
rotation = 0.391483
progress = 100.0

[node name="Follow" type="Sprite2D" parent="PlayGround/TrackL/ExamplePath/PathFollow2D4"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("7_7o5xm")

[node name="Line2D" type="Line2D" parent="PlayGround/TrackL/ExamplePath"]
texture_repeat = 2
points = PackedVector2Array(-78.5714, -243.878, -91.8367, -238.776, -106.122, -232.653, -116.327, -227.551, -126.531, -222.449, -136.735, -216.327, -146.939, -209.184, -157.143, -202.041, -167.347, -193.878, -177.551, -184.694, -186.735, -175.51, -195.918, -166.327)
width = 14.0
texture = ExtResource("6_srful")
texture_mode = 1

[node name="PathFollow2D6" type="PathFollow2D" parent="PlayGround/TrackL/ExamplePath"]
position = Vector2(-78.7098, -243.645)
rotation = -0.312765
progress = 1528.49

[node name="Follow" type="Sprite2D" parent="PlayGround/TrackL/ExamplePath/PathFollow2D6"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("7_7o5xm")

[node name="PathFollow2D7" type="PathFollow2D" parent="PlayGround/TrackL/ExamplePath"]
position = Vector2(-195.651, -165.002)
rotation = -0.869521
progress = 1385.73

[node name="Follow" type="Sprite2D" parent="PlayGround/TrackL/ExamplePath/PathFollow2D7"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("7_7o5xm")

[node name="Mesh" type="MeshInstance2D" parent="PlayGround/TrackL"]
modulate = Color(1, 1, 1, 0.117647)
scale = Vector2(1.02, 1.02)
mesh = SubResource("QuadMesh_m8f3l")
texture = ExtResource("7_ol0uo")

[node name="Shape" type="CollisionShape2D" parent="PlayGround/TrackL"]
visible = false
shape = SubResource("CircleShape2D_umnea")

[node name="TrackR" type="AnimatableBody2D" parent="PlayGround"]
position = Vector2(768, 324)

[node name="Path" type="Path2D" parent="PlayGround/TrackR"]
self_modulate = Color(1, 1, 1, 0.0980392)
curve = SubResource("Curve2D_43mu5")

[node name="Mesh" type="MeshInstance2D" parent="PlayGround/TrackR"]
modulate = Color(1, 1, 1, 0.117647)
scale = Vector2(1.02, 1.02)
mesh = SubResource("QuadMesh_m8f3l")
texture = ExtResource("7_ol0uo")

[node name="Shape" type="CollisionShape2D" parent="PlayGround/TrackR"]
visible = false
shape = SubResource("CircleShape2D_umnea")

[node name="CtL" type="RigidBody2D" parent="PlayGround"]
position = Vector2(576, 324)
rotation = -3.14159
freeze = true
script = ExtResource("8_hms3c")

[node name="LightOccluder2D" type="LightOccluder2D" parent="PlayGround/CtL"]
visible = false
occluder = SubResource("OccluderPolygon2D_4obor")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayGround/CtL"]
visible = false
shape = SubResource("CircleShape2D_peqsq")

[node name="MeshInstance2D" type="MeshInstance2D" parent="PlayGround/CtL"]
modulate = Color(1, 1, 1, 0.784314)
mesh = SubResource("QuadMesh_1yk10")
texture = ExtResource("9_q6ppy")

[node name="Trail" type="Line2D" parent="PlayGround/CtL"]
width = 7.0
gradient = SubResource("Gradient_ctd7h")
joint_mode = 2
begin_cap_mode = 2
antialiased = true

[node name="CtR" type="RigidBody2D" parent="PlayGround"]
position = Vector2(576, 324)
rotation = -3.14159
freeze = true
script = ExtResource("8_hms3c")

[node name="LightOccluder2D" type="LightOccluder2D" parent="PlayGround/CtR"]
visible = false
occluder = SubResource("OccluderPolygon2D_4obor")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayGround/CtR"]
visible = false
shape = SubResource("CircleShape2D_peqsq")

[node name="MeshInstance2D" type="MeshInstance2D" parent="PlayGround/CtR"]
modulate = Color(1, 1, 1, 0.784314)
mesh = SubResource("QuadMesh_1yk10")
texture = ExtResource("9_q6ppy")

[node name="Trail" type="Line2D" parent="PlayGround/CtR"]
width = 7.0
gradient = SubResource("Gradient_ctd7h")
joint_mode = 2
begin_cap_mode = 2
antialiased = true

[node name="Editor" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 0

[node name="flow" type="Panel" parent="Editor"]
layout_mode = 0
offset_right = 1024.0
offset_bottom = 64.0

[node name="Edit" type="Panel" parent="Editor"]
layout_mode = 0
offset_left = 1024.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="VirtualJoystick" parent="." instance=ExtResource("9_sf2y2")]
layout_mode = 1

[node name="MenuButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -27.0
offset_right = 34.0
offset_bottom = 27.0
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "◈"

[node name="Pause" type="Panel" parent="."]
visible = false
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -45.5
offset_right = 128.0
offset_bottom = 45.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lc835")

[node name="Content" type="HBoxContainer" parent="Pause"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Retry" type="Button" parent="Pause/Content"]
modulate = Color(0, 0, 1, 1)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 75
text = "↺"

[node name="Back" type="Button" parent="Pause/Content"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 75
text = "◈"

[node name="Quit" type="Button" parent="Pause/Content"]
modulate = Color(1, 0, 0, 1)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 60
text = "メ"
